test-suite/tests/fail/ui/designated/missing_designated_parameter.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<S>;

#[stated]
impl<S> Test<S> {}

fn main() {}
